@@ -7,7 +7,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class UserDetailsServiceImpl implements UserDetailsService {
@@ -20,14 +20,17 @@ public class UserDetailsServiceImpl implements UserDetailsService {
         Usuari usuari = usuariRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuari no trobat amb email: " + email));
 
-        // ✅ Prefixa el rol amb "ROLE_" per compatibilitat amb Spring Security
-        String roleName = "ROLE_" + usuari.getRol().name();
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(roleName);
-
         if (usuari.getRol() == null) {
             throw new UsernameNotFoundException("L'usuari no té cap rol assignat");
         }
 
-        return new User(usuari.getEmail(), usuari.getContrasenya(), Collections.singletonList(authority));
+        // ✅ Prefixa el rol amb "ROLE_" per compatibilitat amb Spring Security i
+        //    exposa també l'autoritat sense prefix per poder utilitzar hasAuthority
+        String roleName = "ROLE_" + usuari.getRol().name();
+        List<SimpleGrantedAuthority> authorities = List.of(
+                new SimpleGrantedAuthority(roleName),
+                new SimpleGrantedAuthority(usuari.getRol().name()));
+
+        return new User(usuari.getEmail(), usuari.getContrasenya(), authorities);
     }
 }
